# frizura

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: 01_basic_task.py  02_structured_output.py  03_pipeline.py
src/frizura/: __init__.py
src/frizura/cli/: app.py
src/frizura/core/: __init__.py  context.py  decorators.py  engine.py  events.py  exceptions.py  graph.py
src/frizura/models/: __init__.py  budget.py  config.py  execution.py  providers.py
src/frizura/optimizer/: __init__.py  collector.py  evaluator.py  optimizer.py
src/frizura/providers/: __init__.py  anthropic.py  base.py  google.py  ollama.py  openai.py  registry.py
src/frizura/router/: analyzer.py  calculator.py  router.py  strategies.py
src/frizura/schema/: __init__.py  healer.py  strategies.py  validator.py
src/frizura/swarm/: __init__.py  classifier.py  gateway.py  masker.py  pool.py
src/frizura/timetravel/: __init__.py  inspector.py  replay.py  snapshot.py  store.py
tests/: conftest.py  test_engine.py  test_router.py  test_schema.py  test_swarm.py  test_timetravel.py
