[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frizura"
version = "0.1.0"
description = "Next-gen LLM orchestrator with time-travel debugging, smart routing, schema guard, self-optimization, and hybrid swarm"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [
    { name = "Frizura Team" },
]
keywords = ["llm", "orchestrator", "ai", "agents", "time-travel", "routing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.28",
    "rich>=13.0",
    "anyio>=4.0",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.60"]
anthropic = ["anthropic>=0.40"]
google = ["google-genai>=1.0"]
ollama = ["ollama>=0.4"]
cli = ["typer>=0.15"]
all = ["frizura[openai,anthropic,google,ollama,cli]"]

[project.scripts]
frizura = "frizura.cli.app:main"

[project.urls]
Homepage = "https://github.com/frizura/frizura"
Documentation = "https://frizura.dev"
Repository = "https://github.com/frizura/frizura"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "mypy>=1.14",
]

[tool.hatch.build.targets.wheel]
packages = ["src/frizura"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
